# PT-OMS

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  order_mapping.py  pyproject.toml
connectors/config/: elasticsearch-sink-orders.json
schemas/avro/orders/: order-events.avsc
scripts/elasticsearch/: manage_es_indices.py  mapping_manager.py
scripts/locust/: locust_file.py
scripts/schema_registry/: register_schemas.py
src/configs/: config.py  containers.py  dispatcher.py
src/controllers/order/: order_controller.py
src/logics/order/: order_logic.py
src/models/dtos/order/: order_domain_interface_dtos.py  order_dto.py  order_repository_interface_dtos.py
src/models/entities/: order_index.py
src/models/mappers/: order_es_mapper.py
src/models/repositories/order/: order_repository.py
src/models/repositories/order/adapters/: order_elastic_adapter.py
src/models/types/: base_dtos.py  order_types.py
