[project]
name = "order-repository-service"
version = "0.1.0"
description = "Order Repository Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "archipy>=3.6.0",
    "avro>=1.12.0",
    "confluent-kafka>=2.11.0",
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "add-trailing-comma>=3.2.0",
    "authlib>=1.6.1",
    "black>=25.1.0",
    "cachetools>=6.1.0",
    "codespell>=2.4.1",
    "elasticsearch-dsl[async]>=8.18.0",
    "faker>=37.5.3",
    "httpx>=0.28.1",
    "locust>=2.37.14",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.12.8",
    "validate-pyproject>=0.24.1",
]
